fixed private messaging layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -288,6 +288,11 @@ header{
   margin:0 auto;
 } */
 /* ----------------------Messages----------------------------------------------- */
+.message{
+  display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 .chat-header{
   color:#000000;
   display: flex;
